--- a/assets/root/opt/app/config/requirements.txt
+++ b/assets/root/opt/app/config/requirements.txt
@@ -1,9 +1,9 @@
 # infra
-google-cloud-storage==1.13.2
-sh
+#google-cloud-storage==1.13.2
+#sh
 # basics
-numpy==1.11.2
-scipy
+#numpy==1.11.2
+#scipy
 #scipy
 #scipy==1.2.0
 #numpy==1.15.4
@@ -14,8 +14,8 @@ scipy
 #seaborn==0.8.*
 #pandas==0.23.4
 # ML libraries
-scikit-learn==0.19.*
-scikit-surprise==1.0.*
-keras==2.0.*
-tensorflow==1.12.0
+#scikit-learn==0.19.*
+scikit-surprise
+#keras==2.0.*
+#tensorflow==1.12.0
 #turicreate==5.*
