--- a/assets/root/opt/app/config/requirements.txt
+++ b/assets/root/opt/app/config/requirements.txt
@@ -1,22 +1,14 @@
 # infra
-#google-cloud-storage==1.13.2
-#sh
+google-cloud-storage==1.13.2
+sh
 # basics
-#numpy==1.11.2
-#scipy
-#scipy
-#scipy==1.2.0
-#numpy==1.15.4
-#numpy
+scipy==1.2.0
+numpy==1.15.4
 #sympy==1.1.*
 #numexpr==2.6.*
-#matplotlib==2.2.*
-#seaborn==0.8.*
-#pandas==0.23.4
+matplotlib==2.2.*
+seaborn==0.8.*
+pandas==0.23.4
 # ML libraries
-#scikit-learn==0.19.*
-numpy>=1.11.2
-scikit-surprise
-#keras==2.0.*
-#tensorflow==1.12.0
-#turicreate==5.*
+scikit-learn
+tensorflow==1.12.0
